// API definition for Mint service

syntax = "proto3";

option java_multiple_files = true;
option java_package = "xyz.cornerstone.serviceC";
option java_outer_classname = "ServiceCProto";

service ServiceC {

  rpc CallC (CallCRequest)
      returns (CallCResponse);
}

message CallCRequest {
  string requestCPayload = 1;
}

message CallCResponse {
  string responseCPayload = 1;
}
